# kube-service-selectors

./: .gitignore  Dockerfile  Dockerfile_tests  README.md  build.sh  pyproject.toml  run_tests.sh
.github/workflows/: ci.yml
kube_service_selectors/: main.py  utils.py
tests/: conftest.py  test_service_selectors_collector.py  test_utils.py
