[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kube-service-selectors"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "kubernetes==24.2.0",
    "prometheus-client==0.14.1",
    "PyYAML==6.0.2",
]

[project.optional-dependencies]
dev = [
    "black==24.10.0",
    "coverage==7.13.5",
    "nose2==0.12.0",
    "pycodestyle==2.9.1",
    "pytest==7.1.2",
]

[tool.black]
line-length = 79
target-version = ['py312']
include = '\.pyi?$'
