[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kube-service-selectors"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "kubernetes==24.2.0",
    "prometheus-client==0.14.1",
    "PyYAML==6.0.2",
]

[project.optional-dependencies]
dev = [
    "black==24.10.0",
    "pycodestyle==2.9.1",
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=kube_service_selectors --cov-report=term --cov-report=html:reports"

[tool.black]
line-length = 79
target-version = ['py312']
include = '\.pyi?$'
